# bot

./: .env.example  .gitignore  .gitmodules  .pylintrc  Dockerfile  DockerfileMono  README.md  pyproject.toml
.github/workflows/: linting.yaml
src/: main.py
src/api/: exceptions.py  mediator.py  types.py
src/clients/: __init__.py
src/config/: personality.py
src/handlers/: common.py
